examples/invalid/BitsetOverlap.idl
// SPDX-License-Identifier: Apache-2.0 OR MIT
// Copyright (c) 2025-2026 naskel.com

@bit_bound(8)
bitset Ovl {
    bitfield<4> a, @position(0);
    bitfield<5> b, @position(3);
};

